# mycraft

./: CMakeLists.txt  README.md
glsl/: block.fs  block.vs  line.vs
src/: config.h  cube.c  cube.h  item.c  item.h  main.c  map.c  map.h  matrix.c  matrix.h  util.c  util.h  world.c  world.h
